Fix scrollbar toggling

--- a/frontend/form-builder/src/components/ComponentSettings/ComponentSettings.module.css
+++ b/frontend/form-builder/src/components/ComponentSettings/ComponentSettings.module.css
@@ -9,7 +9,7 @@
   padding-top: 0;
   gap: var(--fds-spacing-6);
   text-align: left;
-  height: 85%;
+  height: 90%;
   overflow-x: hidden;
   scrollbar-width: thin;
   scrollbar-color: var(--fds-semantic-surface-neutral-inverted) transparent;
@@ -20,7 +20,6 @@
   flex-direction: column;
   gap: var(--fds-spacing-2);
   padding-top: var(--fds-spacing-3);
-  padding-bottom: var(--fds-spacing-3);
 }
 
 .modalWindow {
