--- a/frontend/form-builder/src/components/FormPreview/FormPreview.module.css
+++ b/frontend/form-builder/src/components/FormPreview/FormPreview.module.css
@@ -20,7 +20,7 @@
 }
 
 .dropArea {
-  height: 85%;
+  height: 90%;
   overflow-x: hidden;
   scrollbar-width: thin;
   scrollbar-color: var(--fds-semantic-surface-neutral-inverted) transparent;
